<?xml version="1.0" encoding="utf-8"?>
<!-- Derechos de autor (C) 2026 Alberto Avidad Fernández. -->
<!-- Autoría: Alberto Avidad Fernández -->
<!-- Licencia: EUPL 1.2 o posterior -->
<!-- SPDX-License-Identifier: EUPL-1.2 -->

<!-- Acciones secundarias en la barra, como en escritorio. -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_language"
        android:title="@string/language_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_preferences"
        android:title="@string/preferences_button"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_diagnostics"
        android:title="@string/diagnostics_button"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        app:showAsAction="never" />
</menu>
