...
        android:accessibilityLiveRegion="polite"
        android:textColor="@color/on_surface"
        android:textIsSelectable="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/checkCertificateOnlineRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal">
...
